--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_auth: ^3.3.18
   firebase_core: ^1.17.0
   shared_preferences: ^2.0.15
+  provider: ^6.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
