--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^1.17.0
   shared_preferences: ^2.0.15
   provider: ^6.0.2
+  flutter_tex: ^4.0.3+4
 
 
   # The following adds the Cupertino Icons font to your application.
