--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,10 @@ dependencies:
   flutter_svg: ^1.0.3
   firebase_auth: ^3.3.18
   firebase_core: ^1.17.0
+  cloud_firestore: ^3.1.16
   shared_preferences: ^2.0.15
   provider: ^6.0.2
   flutter_tex: ^4.0.3+4
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +44,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^2.2.3
+  flutter_launcher_icons:
+
+flutter_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/icons/ic_launcher.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
